# National-Parks-Recreational-Database

./: .env.example  .gitignore  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
data/: README.md  source_manifest.yml
data/recovered/: np_visitation_recovered.csv
database/: README.md
docs/: architecture.md  data_dictionary.md  data_provenance.md  database_design.md  legacy_vs_modern.md  limitations.md  methodology.md  performance.md  query_results.md  reconstruction_notes.md  source_audit.md
figures/diagrams/: database_architecture.mmd  modernized_erd.mmd
notebooks/: 01_visitation_data_reconstruction.ipynb  02_exploratory_analysis.ipynb
outputs/quality_reports/: migration_reconciliation.csv  spatial_quality_summary.csv
outputs/query_results/: completeness_matrix.csv  historic_site_density.csv  infrastructure_density.csv  q1_colorado_parks_area.csv  q2_visitation_2010_2020.csv  q3_rocky_mountain_amenity_counts.csv  q4_unpaved_road_lengths.csv  q5_parks_above_average_total_visitation.csv  seasonality.csv  visitation_pressure.csv
report/: README.md
scripts/: _common.sh  export_recovered_data.sh  initialize_core_database.sh  inspect_dump.sh  migrate_legacy_to_core.sh  reproduce_all.sh  restore_legacy_dump.sh  run_analysis.sh  run_quality_checks.sh
sql/analytics/: 01_original_questions.sql  (+4 more)
tests/: test_analysis_queries.py  test_core_database.py  test_data_validation.py  test_legacy_database.py  test_migration_reconciliation.py  test_visitation_cleaning.py
(+20 files in other folders)
