[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "national-parks-spatial-database"
version = "0.1.0"
description = "Reconstructed academic spatial database project based on a legacy PostgreSQL/PostGIS dump and report."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Repository Owner", email = "replace-with-your-email@example.com" }
]
dependencies = [
  "matplotlib>=3.9",
  "pandas>=2.2",
  "pgdumplib>=4.0.0",
  "pyproj>=3.7",
  "PyYAML>=6.0",
  "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
national-parks-cli = "national_parks.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

